unpackaged/main/default/objects/Barrel_Number__c/Barrel_Number__c.object-meta.xml
<CustomObject>
    <description>Initially created for the Single Barrel Program.  Barrel numbers assigned to each barrel having to do with the Single Barrel Program will come from this object.  The next barrel number is stored on this object and incremented each time a barrel is created for a particular brand.</description>
    <label>Barrel Number</label>
    <nameField>
        <label>Barrel Number Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Barrel Numbers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>