unpackaged/main/default/objects/Barrel_Number__c/fields/Next_Barrel_Number__c.field-meta.xml
<CustomField>
    <fullName>Next_Barrel_Number__c</fullName>
    <label>Next Barrel Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>